#92 [refactor] : CustomUserDetails을 사용해 유저를 반환하는 방식으로 리팩토링한다